Parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BAD_ID_WITH_DOLLAR
    INVALID

Grammar

Rule 0     S' -> program
Rule 1     program -> declaration_list
Rule 2     declaration_list -> declaration_list declaration
Rule 3     declaration_list -> declaration
Rule 4     declaration -> var_decl
Rule 5     declaration -> func_decl
Rule 6     declaration -> error SEMI
Rule 7     var_decl -> type ID SEMI
Rule 8     var_decl -> type ID LBRACKET INT_LITERAL RBRACKET SEMI
Rule 9     type -> INT
Rule 10    type -> FLOAT
Rule 11    type -> BOOL
Rule 12    type -> CHAR
Rule 13    type -> STRING
Rule 14    func_decl -> FUNC ID LPAREN param_list_opt RPAREN block
Rule 15    param_list_opt -> param_list
Rule 16    param_list_opt -> empty
Rule 17    param_list -> param_list COMMA param
Rule 18    param_list -> param
Rule 19    param -> type ID
Rule 20    block -> LBRACE statement_list RBRACE
Rule 21    statement_list -> statement_list statement
Rule 22    statement_list -> empty
Rule 23    statement -> assignment_or_block
Rule 24    statement -> var_decl
Rule 25    statement -> if_stmt
Rule 26    statement -> while_stmt
Rule 27    statement -> for_stmt
Rule 28    statement -> io_stmt SEMI
Rule 29    statement -> return_stmt SEMI
Rule 30    statement -> break_stmt SEMI
Rule 31    statement -> continue_stmt SEMI
Rule 32    statement -> error SEMI
Rule 33    assignment_or_block -> location ASSIGN expr semi_opt
Rule 34    location -> ID
Rule 35    location -> ID LBRACKET expr RBRACKET
Rule 36    if_stmt -> IF LPAREN expr RPAREN block elif_part else_part_opt
Rule 37    elif_part -> ELIF LPAREN expr RPAREN block elif_part
Rule 38    elif_part -> empty
Rule 39    else_part_opt -> ELSE block
Rule 40    else_part_opt -> empty
Rule 41    while_stmt -> WHILE LPAREN expr RPAREN block
Rule 42    for_stmt -> FOR LPAREN assignment SEMI expr SEMI assignment RPAREN block
Rule 43    assignment -> location ASSIGN expr
Rule 44    io_stmt -> PRINT LPAREN expr RPAREN
Rule 45    io_stmt -> INPUT LPAREN ID RPAREN
Rule 46    return_stmt -> RETURN expr_opt
Rule 47    break_stmt -> BREAK
Rule 48    continue_stmt -> CONTINUE
Rule 49    expr_opt -> expr
Rule 50    expr_opt -> empty
Rule 51    expr -> expr PLUS expr
Rule 52    expr -> expr MINUS expr
Rule 53    expr -> expr TIMES expr
Rule 54    expr -> expr DIVIDE expr
Rule 55    expr -> expr MOD expr
Rule 56    expr -> expr LT expr
Rule 57    expr -> expr GT expr
Rule 58    expr -> expr LE expr
Rule 59    expr -> expr GE expr
Rule 60    expr -> expr EQ expr
Rule 61    expr -> expr NE expr
Rule 62    expr -> expr OR expr
Rule 63    expr -> expr AND expr
Rule 64    expr -> MINUS expr
Rule 65    expr -> NOT expr
Rule 66    expr -> LPAREN expr RPAREN
Rule 67    expr -> literal
Rule 68    expr -> location
Rule 69    expr -> func_call
Rule 70    func_call -> ID LPAREN arg_list_opt RPAREN
Rule 71    arg_list_opt -> arg_list
Rule 72    arg_list_opt -> empty
Rule 73    arg_list -> arg_list COMMA expr
Rule 74    arg_list -> expr
Rule 75    literal -> INT_LITERAL
Rule 76    literal -> FLOAT_LITERAL
Rule 77    literal -> FALSE
Rule 78    literal -> TRUE
Rule 79    literal -> CHAR_LITERAL
Rule 80    literal -> STRING_LITERAL
Rule 81    semi_opt -> SEMI
Rule 82    semi_opt -> empty
Rule 83    empty -> <empty>

Terminals, with rules where they appear

AND                  : 63
ASSIGN               : 33 43
BAD_ID_WITH_DOLLAR   : 
BOOL                 : 11
BREAK                : 47
CHAR                 : 12
CHAR_LITERAL         : 79
COMMA                : 17 73
CONTINUE             : 48
DIVIDE               : 54
ELIF                 : 37
ELSE                 : 39
EQ                   : 60
FALSE                : 77
FLOAT                : 10
FLOAT_LITERAL        : 76
FOR                  : 42
FUNC                 : 14
GE                   : 59
GT                   : 57
ID                   : 7 8 14 19 34 35 45 70
IF                   : 36
INPUT                : 45
INT                  : 9
INT_LITERAL          : 8 75
INVALID              : 
LBRACE               : 20
LBRACKET             : 8 35
LE                   : 58
LPAREN               : 14 36 37 41 42 44 45 66 70
LT                   : 56
MINUS                : 52 64
MOD                  : 55
NE                   : 61
NOT                  : 65
OR                   : 62
PLUS                 : 51
PRINT                : 44
RBRACE               : 20
RBRACKET             : 8 35
RETURN               : 46
RPAREN               : 14 36 37 41 42 44 45 66 70
SEMI                 : 6 7 8 28 29 30 31 32 42 42 81
STRING               : 13
STRING_LITERAL       : 80
TIMES                : 53
TRUE                 : 78
WHILE                : 41
error                : 6 32

Nonterminals, with rules where they appear

arg_list             : 71 73
arg_list_opt         : 70
assignment           : 42 42
assignment_or_block  : 23
block                : 14 36 37 39 41 42
break_stmt           : 30
continue_stmt        : 31
declaration          : 2 3
declaration_list     : 1 2
elif_part            : 36 37
else_part_opt        : 36
empty                : 16 22 38 40 50 72 82
expr                 : 33 35 36 37 41 42 43 44 49 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 65 66 73 74
expr_opt             : 46
for_stmt             : 27
func_call            : 69
func_decl            : 5
if_stmt              : 25
io_stmt              : 28
literal              : 67
location             : 33 43 68
param                : 17 18
param_list           : 15 17
param_list_opt       : 14
program              : 0
return_stmt          : 29
semi_opt             : 33
statement            : 21
statement_list       : 20 21
type                 : 7 8 19
var_decl             : 4 24
while_stmt           : 26

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declaration_list
    (2) declaration_list -> . declaration_list declaration
    (3) declaration_list -> . declaration
    (4) declaration -> . var_decl
    (5) declaration -> . func_decl
    (6) declaration -> . error SEMI
    (7) var_decl -> . type ID SEMI
    (8) var_decl -> . type ID LBRACKET INT_LITERAL RBRACKET SEMI
    (14) func_decl -> . FUNC ID LPAREN param_list_opt RPAREN block
    (9) type -> . INT
    (10) type -> . FLOAT
    (11) type -> . BOOL
    (12) type -> . CHAR
    (13) type -> . STRING

    error           shift and go to state 6
    FUNC            shift and go to state 8
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    BOOL            shift and go to state 11
    CHAR            shift and go to state 12
    STRING          shift and go to state 13

    program                        shift and go to state 1
    declaration_list               shift and go to state 2
    declaration                    shift and go to state 3
    var_decl                       shift and go to state 4
    func_decl                      shift and go to state 5
    type                           shift and go to state 7

state 1

    (0) S' -> program .



state 2

    (1) program -> declaration_list .
    (2) declaration_list -> declaration_list . declaration
    (4) declaration -> . var_decl
    (5) declaration -> . func_decl
    (6) declaration -> . error SEMI
    (7) var_decl -> . type ID SEMI
    (8) var_decl -> . type ID LBRACKET INT_LITERAL RBRACKET SEMI
    (14) func_decl -> . FUNC ID LPAREN param_list_opt RPAREN block
    (9) type -> . INT
    (10) type -> . FLOAT
    (11) type -> . BOOL
    (12) type -> . CHAR
    (13) type -> . STRING

    $end            reduce using rule 1 (program -> declaration_list .)
    error           shift and go to state 6
    FUNC            shift and go to state 8
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    BOOL            shift and go to state 11
    CHAR            shift and go to state 12
    STRING          shift and go to state 13

    declaration                    shift and go to state 14
    var_decl                       shift and go to state 4
    func_decl                      shift and go to state 5
    type                           shift and go to state 7

state 3

    (3) declaration_list -> declaration .

    error           reduce using rule 3 (declaration_list -> declaration .)
    FUNC            reduce using rule 3 (declaration_list -> declaration .)
    INT             reduce using rule 3 (declaration_list -> declaration .)
    FLOAT           reduce using rule 3 (declaration_list -> declaration .)
    BOOL            reduce using rule 3 (declaration_list -> declaration .)
    CHAR            reduce using rule 3 (declaration_list -> declaration .)
    STRING          reduce using rule 3 (declaration_list -> declaration .)
    $end            reduce using rule 3 (declaration_list -> declaration .)


state 4

    (4) declaration -> var_decl .

    error           reduce using rule 4 (declaration -> var_decl .)
    FUNC            reduce using rule 4 (declaration -> var_decl .)
    INT             reduce using rule 4 (declaration -> var_decl .)
    FLOAT           reduce using rule 4 (declaration -> var_decl .)
    BOOL            reduce using rule 4 (declaration -> var_decl .)
    CHAR            reduce using rule 4 (declaration -> var_decl .)
    STRING          reduce using rule 4 (declaration -> var_decl .)
    $end            reduce using rule 4 (declaration -> var_decl .)


state 5

    (5) declaration -> func_decl .

    error           reduce using rule 5 (declaration -> func_decl .)
    FUNC            reduce using rule 5 (declaration -> func_decl .)
    INT             reduce using rule 5 (declaration -> func_decl .)
    FLOAT           reduce using rule 5 (declaration -> func_decl .)
    BOOL            reduce using rule 5 (declaration -> func_decl .)
    CHAR            reduce using rule 5 (declaration -> func_decl .)
    STRING          reduce using rule 5 (declaration -> func_decl .)
    $end            reduce using rule 5 (declaration -> func_decl .)


state 6

    (6) declaration -> error . SEMI

    SEMI            shift and go to state 15


state 7

    (7) var_decl -> type . ID SEMI
    (8) var_decl -> type . ID LBRACKET INT_LITERAL RBRACKET SEMI

    ID              shift and go to state 16


state 8

    (14) func_decl -> FUNC . ID LPAREN param_list_opt RPAREN block

    ID              shift and go to state 17


state 9

    (9) type -> INT .

    ID              reduce using rule 9 (type -> INT .)


state 10

    (10) type -> FLOAT .

    ID              reduce using rule 10 (type -> FLOAT .)


state 11

    (11) type -> BOOL .

    ID              reduce using rule 11 (type -> BOOL .)


state 12

    (12) type -> CHAR .

    ID              reduce using rule 12 (type -> CHAR .)


state 13

    (13) type -> STRING .

    ID              reduce using rule 13 (type -> STRING .)


state 14

    (2) declaration_list -> declaration_list declaration .

    error           reduce using rule 2 (declaration_list -> declaration_list declaration .)
    FUNC            reduce using rule 2 (declaration_list -> declaration_list declaration .)
    INT             reduce using rule 2 (declaration_list -> declaration_list declaration .)
    FLOAT           reduce using rule 2 (declaration_list -> declaration_list declaration .)
    BOOL            reduce using rule 2 (declaration_list -> declaration_list declaration .)
    CHAR            reduce using rule 2 (declaration_list -> declaration_list declaration .)
    STRING          reduce using rule 2 (declaration_list -> declaration_list declaration .)
    $end            reduce using rule 2 (declaration_list -> declaration_list declaration .)


state 15

    (6) declaration -> error SEMI .

    error           reduce using rule 6 (declaration -> error SEMI .)
    FUNC            reduce using rule 6 (declaration -> error SEMI .)
    INT             reduce using rule 6 (declaration -> error SEMI .)
    FLOAT           reduce using rule 6 (declaration -> error SEMI .)
    BOOL            reduce using rule 6 (declaration -> error SEMI .)
    CHAR            reduce using rule 6 (declaration -> error SEMI .)
    STRING          reduce using rule 6 (declaration -> error SEMI .)
    $end            reduce using rule 6 (declaration -> error SEMI .)


state 16

    (7) var_decl -> type ID . SEMI
    (8) var_decl -> type ID . LBRACKET INT_LITERAL RBRACKET SEMI

    SEMI            shift and go to state 18
    LBRACKET        shift and go to state 19


state 17

    (14) func_decl -> FUNC ID . LPAREN param_list_opt RPAREN block

    LPAREN          shift and go to state 20


state 18

    (7) var_decl -> type ID SEMI .

    error           reduce using rule 7 (var_decl -> type ID SEMI .)
    FUNC            reduce using rule 7 (var_decl -> type ID SEMI .)
    INT             reduce using rule 7 (var_decl -> type ID SEMI .)
    FLOAT           reduce using rule 7 (var_decl -> type ID SEMI .)
    BOOL            reduce using rule 7 (var_decl -> type ID SEMI .)
    CHAR            reduce using rule 7 (var_decl -> type ID SEMI .)
    STRING          reduce using rule 7 (var_decl -> type ID SEMI .)
    $end            reduce using rule 7 (var_decl -> type ID SEMI .)
    RBRACE          reduce using rule 7 (var_decl -> type ID SEMI .)
    IF              reduce using rule 7 (var_decl -> type ID SEMI .)
    WHILE           reduce using rule 7 (var_decl -> type ID SEMI .)
    FOR             reduce using rule 7 (var_decl -> type ID SEMI .)
    PRINT           reduce using rule 7 (var_decl -> type ID SEMI .)
    INPUT           reduce using rule 7 (var_decl -> type ID SEMI .)
    RETURN          reduce using rule 7 (var_decl -> type ID SEMI .)
    BREAK           reduce using rule 7 (var_decl -> type ID SEMI .)
    CONTINUE        reduce using rule 7 (var_decl -> type ID SEMI .)
    ID              reduce using rule 7 (var_decl -> type ID SEMI .)


state 19

    (8) var_decl -> type ID LBRACKET . INT_LITERAL RBRACKET SEMI

    INT_LITERAL     shift and go to state 21


state 20

    (14) func_decl -> FUNC ID LPAREN . param_list_opt RPAREN block
    (15) param_list_opt -> . param_list
    (16) param_list_opt -> . empty
    (17) param_list -> . param_list COMMA param
    (18) param_list -> . param
    (83) empty -> .
    (19) param -> . type ID
    (9) type -> . INT
    (10) type -> . FLOAT
    (11) type -> . BOOL
    (12) type -> . CHAR
    (13) type -> . STRING

    RPAREN          reduce using rule 83 (empty -> .)
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    BOOL            shift and go to state 11
    CHAR            shift and go to state 12
    STRING          shift and go to state 13

    param_list_opt                 shift and go to state 22
    param_list                     shift and go to state 23
    empty                          shift and go to state 24
    param                          shift and go to state 25
    type                           shift and go to state 26

state 21

    (8) var_decl -> type ID LBRACKET INT_LITERAL . RBRACKET SEMI

    RBRACKET        shift and go to state 27


state 22

    (14) func_decl -> FUNC ID LPAREN param_list_opt . RPAREN block

    RPAREN          shift and go to state 28


state 23

    (15) param_list_opt -> param_list .
    (17) param_list -> param_list . COMMA param

    RPAREN          reduce using rule 15 (param_list_opt -> param_list .)
    COMMA           shift and go to state 29


state 24

    (16) param_list_opt -> empty .

    RPAREN          reduce using rule 16 (param_list_opt -> empty .)


state 25

    (18) param_list -> param .

    COMMA           reduce using rule 18 (param_list -> param .)
    RPAREN          reduce using rule 18 (param_list -> param .)


state 26

    (19) param -> type . ID

    ID              shift and go to state 30


state 27

    (8) var_decl -> type ID LBRACKET INT_LITERAL RBRACKET . SEMI

    SEMI            shift and go to state 31


state 28

    (14) func_decl -> FUNC ID LPAREN param_list_opt RPAREN . block
    (20) block -> . LBRACE statement_list RBRACE

    LBRACE          shift and go to state 33

    block                          shift and go to state 32

state 29

    (17) param_list -> param_list COMMA . param
    (19) param -> . type ID
    (9) type -> . INT
    (10) type -> . FLOAT
    (11) type -> . BOOL
    (12) type -> . CHAR
    (13) type -> . STRING

    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    BOOL            shift and go to state 11
    CHAR            shift and go to state 12
    STRING          shift and go to state 13

    param                          shift and go to state 34
    type                           shift and go to state 26

state 30

    (19) param -> type ID .

    COMMA           reduce using rule 19 (param -> type ID .)
    RPAREN          reduce using rule 19 (param -> type ID .)


state 31

    (8) var_decl -> type ID LBRACKET INT_LITERAL RBRACKET SEMI .

    error           reduce using rule 8 (var_decl -> type ID LBRACKET INT_LITERAL RBRACKET SEMI .)
    FUNC            reduce using rule 8 (var_decl -> type ID LBRACKET INT_LITERAL RBRACKET SEMI .)
    INT             reduce using rule 8 (var_decl -> type ID LBRACKET INT_LITERAL RBRACKET SEMI .)
    FLOAT           reduce using rule 8 (var_decl -> type ID LBRACKET INT_LITERAL RBRACKET SEMI .)
    BOOL            reduce using rule 8 (var_decl -> type ID LBRACKET INT_LITERAL RBRACKET SEMI .)
    CHAR            reduce using rule 8 (var_decl -> type ID LBRACKET INT_LITERAL RBRACKET SEMI .)
    STRING          reduce using rule 8 (var_decl -> type ID LBRACKET INT_LITERAL RBRACKET SEMI .)
    $end            reduce using rule 8 (var_decl -> type ID LBRACKET INT_LITERAL RBRACKET SEMI .)
    RBRACE          reduce using rule 8 (var_decl -> type ID LBRACKET INT_LITERAL RBRACKET SEMI .)
    IF              reduce using rule 8 (var_decl -> type ID LBRACKET INT_LITERAL RBRACKET SEMI .)
    WHILE           reduce using rule 8 (var_decl -> type ID LBRACKET INT_LITERAL RBRACKET SEMI .)
    FOR             reduce using rule 8 (var_decl -> type ID LBRACKET INT_LITERAL RBRACKET SEMI .)
    PRINT           reduce using rule 8 (var_decl -> type ID LBRACKET INT_LITERAL RBRACKET SEMI .)
    INPUT           reduce using rule 8 (var_decl -> type ID LBRACKET INT_LITERAL RBRACKET SEMI .)
    RETURN          reduce using rule 8 (var_decl -> type ID LBRACKET INT_LITERAL RBRACKET SEMI .)
    BREAK           reduce using rule 8 (var_decl -> type ID LBRACKET INT_LITERAL RBRACKET SEMI .)
    CONTINUE        reduce using rule 8 (var_decl -> type ID LBRACKET INT_LITERAL RBRACKET SEMI .)
    ID              reduce using rule 8 (var_decl -> type ID LBRACKET INT_LITERAL RBRACKET SEMI .)


state 32

    (14) func_decl -> FUNC ID LPAREN param_list_opt RPAREN block .

    error           reduce using rule 14 (func_decl -> FUNC ID LPAREN param_list_opt RPAREN block .)
    FUNC            reduce using rule 14 (func_decl -> FUNC ID LPAREN param_list_opt RPAREN block .)
    INT             reduce using rule 14 (func_decl -> FUNC ID LPAREN param_list_opt RPAREN block .)
    FLOAT           reduce using rule 14 (func_decl -> FUNC ID LPAREN param_list_opt RPAREN block .)
    BOOL            reduce using rule 14 (func_decl -> FUNC ID LPAREN param_list_opt RPAREN block .)
    CHAR            reduce using rule 14 (func_decl -> FUNC ID LPAREN param_list_opt RPAREN block .)
    STRING          reduce using rule 14 (func_decl -> FUNC ID LPAREN param_list_opt RPAREN block .)
    $end            reduce using rule 14 (func_decl -> FUNC ID LPAREN param_list_opt RPAREN block .)


state 33

    (20) block -> LBRACE . statement_list RBRACE
    (21) statement_list -> . statement_list statement
    (22) statement_list -> . empty
    (83) empty -> .

    RBRACE          reduce using rule 83 (empty -> .)
    error           reduce using rule 83 (empty -> .)
    IF              reduce using rule 83 (empty -> .)
    WHILE           reduce using rule 83 (empty -> .)
    FOR             reduce using rule 83 (empty -> .)
    PRINT           reduce using rule 83 (empty -> .)
    INPUT           reduce using rule 83 (empty -> .)
    RETURN          reduce using rule 83 (empty -> .)
    BREAK           reduce using rule 83 (empty -> .)
    CONTINUE        reduce using rule 83 (empty -> .)
    ID              reduce using rule 83 (empty -> .)
    INT             reduce using rule 83 (empty -> .)
    FLOAT           reduce using rule 83 (empty -> .)
    BOOL            reduce using rule 83 (empty -> .)
    CHAR            reduce using rule 83 (empty -> .)
    STRING          reduce using rule 83 (empty -> .)

    statement_list                 shift and go to state 35
    empty                          shift and go to state 36

state 34

    (17) param_list -> param_list COMMA param .

    COMMA           reduce using rule 17 (param_list -> param_list COMMA param .)
    RPAREN          reduce using rule 17 (param_list -> param_list COMMA param .)


state 35

    (20) block -> LBRACE statement_list . RBRACE
    (21) statement_list -> statement_list . statement
    (23) statement -> . assignment_or_block
    (24) statement -> . var_decl
    (25) statement -> . if_stmt
    (26) statement -> . while_stmt
    (27) statement -> . for_stmt
    (28) statement -> . io_stmt SEMI
    (29) statement -> . return_stmt SEMI
    (30) statement -> . break_stmt SEMI
    (31) statement -> . continue_stmt SEMI
    (32) statement -> . error SEMI
    (33) assignment_or_block -> . location ASSIGN expr semi_opt
    (7) var_decl -> . type ID SEMI
    (8) var_decl -> . type ID LBRACKET INT_LITERAL RBRACKET SEMI
    (36) if_stmt -> . IF LPAREN expr RPAREN block elif_part else_part_opt
    (41) while_stmt -> . WHILE LPAREN expr RPAREN block
    (42) for_stmt -> . FOR LPAREN assignment SEMI expr SEMI assignment RPAREN block
    (44) io_stmt -> . PRINT LPAREN expr RPAREN
    (45) io_stmt -> . INPUT LPAREN ID RPAREN
    (46) return_stmt -> . RETURN expr_opt
    (47) break_stmt -> . BREAK
    (48) continue_stmt -> . CONTINUE
    (34) location -> . ID
    (35) location -> . ID LBRACKET expr RBRACKET
    (9) type -> . INT
    (10) type -> . FLOAT
    (11) type -> . BOOL
    (12) type -> . CHAR
    (13) type -> . STRING

    RBRACE          shift and go to state 37
    error           shift and go to state 48
    IF              shift and go to state 51
    WHILE           shift and go to state 52
    FOR             shift and go to state 53
    PRINT           shift and go to state 54
    INPUT           shift and go to state 55
    RETURN          shift and go to state 56
    BREAK           shift and go to state 57
    CONTINUE        shift and go to state 58
    ID              shift and go to state 50
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    BOOL            shift and go to state 11
    CHAR            shift and go to state 12
    STRING          shift and go to state 13

    statement                      shift and go to state 38
    assignment_or_block            shift and go to state 39
    var_decl                       shift and go to state 40
    if_stmt                        shift and go to state 41
    while_stmt                     shift and go to state 42
    for_stmt                       shift and go to state 43
    io_stmt                        shift and go to state 44
    return_stmt                    shift and go to state 45
    break_stmt                     shift and go to state 46
    continue_stmt                  shift and go to state 47
    location                       shift and go to state 49
    type                           shift and go to state 7

state 36

    (22) statement_list -> empty .

    RBRACE          reduce using rule 22 (statement_list -> empty .)
    error           reduce using rule 22 (statement_list -> empty .)
    IF              reduce using rule 22 (statement_list -> empty .)
    WHILE           reduce using rule 22 (statement_list -> empty .)
    FOR             reduce using rule 22 (statement_list -> empty .)
    PRINT           reduce using rule 22 (statement_list -> empty .)
    INPUT           reduce using rule 22 (statement_list -> empty .)
    RETURN          reduce using rule 22 (statement_list -> empty .)
    BREAK           reduce using rule 22 (statement_list -> empty .)
    CONTINUE        reduce using rule 22 (statement_list -> empty .)
    ID              reduce using rule 22 (statement_list -> empty .)
    INT             reduce using rule 22 (statement_list -> empty .)
    FLOAT           reduce using rule 22 (statement_list -> empty .)
    BOOL            reduce using rule 22 (statement_list -> empty .)
    CHAR            reduce using rule 22 (statement_list -> empty .)
    STRING          reduce using rule 22 (statement_list -> empty .)


state 37

    (20) block -> LBRACE statement_list RBRACE .

    error           reduce using rule 20 (block -> LBRACE statement_list RBRACE .)
    FUNC            reduce using rule 20 (block -> LBRACE statement_list RBRACE .)
    INT             reduce using rule 20 (block -> LBRACE statement_list RBRACE .)
    FLOAT           reduce using rule 20 (block -> LBRACE statement_list RBRACE .)
    BOOL            reduce using rule 20 (block -> LBRACE statement_list RBRACE .)
    CHAR            reduce using rule 20 (block -> LBRACE statement_list RBRACE .)
    STRING          reduce using rule 20 (block -> LBRACE statement_list RBRACE .)
    $end            reduce using rule 20 (block -> LBRACE statement_list RBRACE .)
    ELIF            reduce using rule 20 (block -> LBRACE statement_list RBRACE .)
    ELSE            reduce using rule 20 (block -> LBRACE statement_list RBRACE .)
    RBRACE          reduce using rule 20 (block -> LBRACE statement_list RBRACE .)
    IF              reduce using rule 20 (block -> LBRACE statement_list RBRACE .)
    WHILE           reduce using rule 20 (block -> LBRACE statement_list RBRACE .)
    FOR             reduce using rule 20 (block -> LBRACE statement_list RBRACE .)
    PRINT           reduce using rule 20 (block -> LBRACE statement_list RBRACE .)
    INPUT           reduce using rule 20 (block -> LBRACE statement_list RBRACE .)
    RETURN          reduce using rule 20 (block -> LBRACE statement_list RBRACE .)
    BREAK           reduce using rule 20 (block -> LBRACE statement_list RBRACE .)
    CONTINUE        reduce using rule 20 (block -> LBRACE statement_list RBRACE .)
    ID              reduce using rule 20 (block -> LBRACE statement_list RBRACE .)


state 38

    (21) statement_list -> statement_list statement .
